fix: Adjust workflow panel visibility (#3569)

--- a/war/src/main/webapp/engines/jahia-anthracite/css/app/workflow/_publication-dashboard.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/css/app/workflow/_publication-dashboard.scss
@@ -44,7 +44,7 @@ div.publicationstatuswindow-card.engine-window {
 
   top: 0 !important;
   left: 0 !important;
-  z-index: 1031 !important;
+  z-index: 1040 !important;
   display: flex !important;
   flex-direction: column;
   justify-content: flex-start;
